Bug 483533. Don't change shadow shape due to spread. r=roc